# Evaluator

./: .gitignore  .project  Evaluator.cabal  formulas.txt  mainEval.hs  mainEval.hs~  receiver.hs  receiver.hs~  rev.hs~  send.hs~  text.hs~  text.py~  text~  ttt.hs
Evaluator/: DValeur.hi  DValeur.hs  DValeur.hs~  DValue.hs  DValue.hs~  DValue_test.hs  EqParser.hs  EvalParse.hi  EvalParse.hs  EvalParse.hs~  FunctionDV.hs  FunctionDV.hs~  FunctionExc.hi  FunctionExc.hs  FunctionExc.hs~  MonParse.hi  MonParse.hs  MonParse.hs~  MyParse.hs  Stats.hs  Stats.hs~
Evaluator/FunctionApp/: DirectApp.hs  DirectApp.hs~  DynamicApp.hs  FunctionDV.hs  SemiDirectApp.hs  SemiDynamicApp.hs
src/: Main.hs  mainEval.hs  receiver.hs
src/Data/: Eval.hs  EvalCmd.hs  EvalError.hs  EvalResult.hs  ExpObj.hs  ExpToken.hs  HasPos.hs  Token.hs  Type.hs
src/Eval/: AppCmd.hs  Engine.hs  Function.hs  Marshall.hs  MatchType.hs  MultiPass.hs  Parser.hs  Serialize.hs  Type.hs
src/Evaluator/: DValue.hs  DValue_test.hs  EqParser.hs  EvalParse.hs  Stats.hs
src/Parser/: Monolithic.hs  Parser.hs
test/: MainTest.hs  TestEqParser.hs  TestExample.hs  TestUtils.hs
test/.hpc/: Evaluator.EqParser.mix  Main.mix  TestEqParser.mix  TestExample.mix
test/Engine/: EnginePropFailure.hs  EnginePropFailureConstraint.hs  EnginePropFailureConstraintUtils.hs  EnginePropFailureType.hs  EnginePropFailureTypeUtils.hs  EnginePropFailureUtils.hs  EnginePropSuccess.hs  EnginePropSuccessUtils.hs  EngineUnitFailureConstraint.hs  EngineUnitFailureType.hs  EngineUnitFailureUtils.hs  EngineUnitSuccess.hs  EngineUnitSuccessUtils.hs  EngineUnitUtils.hs  EngineUtils.hs
test/Eval/: EngineErrorTest.hs  EngineReturnValueTest.hs  EngineTest.hs  EngineTestUtils.hs  EvalTestUtils.hs  FunctionEvalTest.hs  FunctionEvalTestUtils.hs  FunctionEvalTestUtils1.hs  FunctionEvalTestUtils2.hs  MultiPassEvalTest.hs  MultiPassEvalTestProp.hs  MultiPassEvalTestUnit.hs  MultiPassEvalTestUtils.hs  MultiPassTest.hs
test/Marshall/: MarshallPropFailure.hs  MarshallPropFailureUtils.hs  MarshallPropSuccess.hs  MarshallPropSuccessUtils.hs  MarshallPropUtils.hs  MarshallUnit.hs  MarshallUnitUtils.hs  MarshallUtils.hs
test/MatchType/: MatchTypeProp.hs  MatchTypePropUtils.hs  MatchTypeUnitFailure.hs  MatchTypeUnitSuccess.hs  MatchTypeUnitUtils.hs  MatchTypeUtils.hs
test/MultiPass/: MultiPassProp.hs  MultiPassPropUtils.hs  MultiPassUnit.hs  MultiPassUnitUtils.hs  MultiPassUtils.hs
test/Parser/: MonolithicParserTest.hs  MonolithicParserTestProp.hs  MonolithicParserTestUnit.hs  MonolithicParserTestUtils.hs  MonolithicTest.hs  ParserProp.hs  ParserTest.hs  (+9 more)
(+39 files in other folders)
