name:           Evaluator
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         antoine

executable Evaluator
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   mtl >=2.1.2 && <2.2,
                   transformers >=0.3.0 && <0.4,
                   containers >=0.5.0 && <0.6,
                   vector >=0.10.0 && <0.11,
                   split >=0.2.2 && <0.3,
                   bytestring >=0.10.0 && <0.11,
                   text >=0.11.3 && <0.12,
                   aeson-pretty >=0.7.1 && <0.8,
                   aeson >=0.7.0 && <0.8,
                   parsec >=3.1.3 && <3.2,
                   statistics >=0.11.0 && <0.12,
                   pretty >=1.1.1 && <1.2,
                   QuickCheck >=2.6 && <2.7,
                   QuickCheck >=2.6 && <2.7
  ghc-options:     -Wall
  other-modules:   
                   Data.Eval,
                   Data.EvalError,
                   Data.Type,
                   Eval.Serialize

test-suite Evaluator-tests
  type:           exitcode-stdio-1.0
  main-is:        MainTest.hs
  ghc-options:    -Wall -rtsopts -fno-warn-missing-signatures -fno-warn-incomplete-patterns -fno-warn-orphans
  build-depends:
                  base >= 4, HTF > 0.9,
                  pretty >=1.1.1 && <1.2,
                  QuickCheck >=2.6 && <2.7
  hs-source-dirs:
                 src,
                 test
  other-modules: 
                 Data.Eval,
                 Data.EvalError,
                 Data.Type,
                 Engine.EngineUnitFailureType,
                 Engine.EngineUtils,
                 Serialize.SerializeUnit,
                 Eval.Serialize

